W10D3 minesweeper css init

--- a/css-friends-12/12-modal.html
+++ b/css-friends-12/12-modal.html
@@ -232,5 +232,29 @@
 
   </footer>
 
+  <div class="modal">
+    <form class="modal-form">
+      <span>x</span>
+      <h1>Welcome</h1>
+      <p>Please sign in to continue.</p>
+      <div>
+        <label class="input">
+          Email
+          <input type="email">
+        </label>
+  
+        <label class="input">
+          Password
+          <input type="password">
+        </label>
+      </div>
+
+      <button>Sign In</button> <span>or <strong>Cancel</strong></span>
+    </form>
+
+    <section class="modal-screen"></section>
+
+  </div>
+
 </body>
 </html>
